--- a/apps/merchant-app/tsconfig.json
+++ b/apps/merchant-app/tsconfig.json
@@ -12,6 +12,8 @@
     "next.config.mjs",
     "**/*.ts",
     "**/*.tsx",
+    "./tailwind.config.js",
+    "./postcss.config.js",
     ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
